--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>This is Humayun</h1>
-    <h2>I am from BD</h2>
+    <h2>I am from Bangladesh</h2>
     <button>Click Here</button>
 </body>
 </html>
